--- a/Chore/css/default.css
+++ b/Chore/css/default.css
@@ -1,5 +1,6 @@
 ﻿body {
-  /* Uncomment this to enable scrolling and zooming
-  touch-action: manipulation;
-  */
+    /* Uncomment this to enable scrolling and zooming*/
+    touch-action: manipulation;
+
+    background-color: lightgray;
 }
